# fire-shader

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: fire.frag  fire_save_1.frag  fire_save_2.frag
src/: main.cpp
